2011-12-04  Chong Yidong  <cyd@gnu.org>

	* message.el (message-pop-to-buffer): Partially revert 2011-11-30
	change (Bug#10200).

2011-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el (uncompface):
	* gnus-art.el (gnus-article-x-face-command): Update the header format
	of icon data for the most recent icontopbm program.

2011-12-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-inews-do-gcc):
	* message.el (message-send-mail):
	* mml.el (mml-generate-mime): Share the value of the buffer-local
	`message-options' variable between a draft buffer and temprary working
	buffers.

2011-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-pop-to-buffer): Revert 2011-09-11 change.

2011-11-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-parts): Convert link file names
	for Cygwin.

2011-11-24  Glenn Morris  <rgm@gnu.org>

	* starttls.el: Fix case of "GnuTLS".

2011-11-24  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-group.el (gnus-group-highlight): Fix typo.

2011-11-24  Adam W  <adam_w67@yahoo.com>  (tiny change)

	* mail-source.el (mail-source-fetch-maildir): Don't expect the return
	value of `delete-file', that returns nil for a local file but returns t
	for a remote file using ssh.

2011-11-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-horizontal-line): Use "?\s" instead of "? " to
	avoid later breakage.

2011-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-setup-buffer): Decode group name used for
	article buffers' name.

2011-11-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-horizontal-line): Revert infinite loops introduced
	by Paul Eggert's spellfixes two days ago.

2011-11-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-display-inline-fontify): Make the font-lock variables
	buffer-local instead of binding them to avoid warnings.  Also demote
	errors (bug#10063).