@@ -6344,7 +6344,11 @@ between beginning of field and beginning of line."
 			       "Message already being composed; erase? ")
 			    (message nil))))
 	    (error "Message being composed")))
-      (funcall (or switch-function #'pop-to-buffer-same-window) name)
+      (funcall (or switch-function
+		   (if (fboundp #'pop-to-buffer-same-window)
+		       #'pop-to-buffer-same-window
+		     #'pop-to-buffer))
+	       name)
       (set-buffer name))
     (erase-buffer)
     (message-mode)))
